# server.js
@@ -6,7 +6,8 @@ const cors = require("cors");
 const YAML = require("yamljs");
 const swagger = require("swagger-ui-express");
 const swaggerDocument = YAML.load("./swagger.yaml");
-const { QueryGenerator } = require("./src/models/query-generator");
+const connection = require("./src/services/database");
+const RoleRouter = require("./src/routes/role.routes");
 require("./src/configs/swagger-docs");
 
 // Global Functionalities
@@ -17,33 +18,7 @@ app.use(
     origin: [`http://localhost:${process.env.PORT}`],
   })
 );
-
-const params = {
-  limit: 400,
-  offset: 0,
-  sortBy: "name",
-  sortByKey: "DESC",
-  fromDate: "2023-10-28",
-  status: "1",
-  toDate: "2023-11-29",
-};
-const keys = ["status"];
-
-const generator = new QueryGenerator();
-
-generator.paginationFn(params);
-
-generator.filterFn(params, keys);
-
-generator.dateFilterFn(params);
-
-console.log(
-  `QUERY = ${generator.filterFn(params, keys)} ${
-    generator.filterFn(params, keys).includes("WHERE")
-      ?'AND '+ generator.dateFilterFn(params)
-      : "WHERE " + generator.dateFilterFn(params)
-  } ${generator.paginationFn(params)}`
-);
+app.use("/", RoleRouter);
 
 app.use("/api-docs", swagger.serve, swagger.setup(swaggerDocument));
 
